<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	style="@style/FishnStore">
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical">
		<LinearLayout
			android:gravity="center"
			android:id="@+id/create_location_fragment_linearlayout_header"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dip"
			android:layout_width="match_parent"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/create_location_fragment_linearlayout_header_textview"
				android:layout_height="wrap_content"
				android:layout_width="0dip"
				android:text="@string/searching_for_location"
				android:textSize="22sp"
				android:layout_weight="1" />
			<ProgressBar
				android:id="@+id/create_location_fragment_linearlayout_header_progressbar"
				android:indeterminate="true"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content" />
			<Button
				android:id="@+id/create_location_fragment_linearlayout_header_button"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/refresh"
				android:visibility="gone" />
		</LinearLayout>
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/name"
			android:textSize="18sp" />
		<EditText
			android:id="@+id/create_location_fragment_edittext_name"
			android:inputType="textCapWords"
			android:layout_height="wrap_content"
			android:layout_marginBottom="12dip"
			android:layout_width="match_parent"
			android:maxLength="255" />
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/altitude"
			android:textSize="20sp" />
		<EditText
			android:enabled="false"
			android:hint="@string/loading"
			android:id="@+id/create_location_fragment_edittext_altitude"
			android:inputType="numberDecimal"
			android:layout_height="wrap_content"
			android:layout_marginBottom="12dip"
			android:layout_width="match_parent"
			android:maxLength="255"
			android:typeface="monospace" />
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/altitude"
			android:textSize="20sp" />
		<EditText
			android:enabled="false"
			android:hint="@string/loading"
			android:id="@+id/create_location_fragment_edittext_latitude"
			android:inputType="numberDecimal"
			android:layout_height="wrap_content"
			android:layout_marginBottom="12dip"
			android:layout_width="match_parent"
			android:maxLength="255"
			android:typeface="monospace" />
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/longitude"
			android:textSize="20sp" />
		<EditText
			android:enabled="false"
			android:hint="@string/loading"
			android:id="@+id/create_location_fragment_edittext_longitude"
			android:inputType="numberDecimal"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dip"
			android:layout_width="match_parent"
			android:maxLength="255"
			android:typeface="monospace" />
		<LinearLayout
			android:gravity="center"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal">
			<Button
				android:enabled="false"
				android:id="@+id/create_location_fragment_button_create_location"
				android:layout_gravity="center"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/create_location" />
			<Button
				android:id="@+id/create_location_fragment_button_manual_entry"
				android:layout_gravity="center"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/manual_entry" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>