<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:baselineAligned="false"
	android:layout_height="wrap_content"
	android:layout_marginBottom="2dip"
	android:layout_marginTop="2dip"
	android:layout_width="match_parent"
	android:orientation="horizontal">
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:layout_width="0dip"
		android:orientation="vertical">
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/name"
			android:textSize="18sp" />
		<TextView
			android:layout_height="wrap_content"
			android:layout_marginBottom="2dip"
			android:layout_width="match_parent"
			android:text="@string/name" />
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/latitude"
			android:textSize="18sp" />
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/latitude"
			android:typeface="monospace" />
	</LinearLayout>
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:layout_width="0dip"
		android:orientation="vertical">
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/altitude"
			android:textSize="18sp" />
		<TextView
			android:layout_height="wrap_content"
			android:layout_marginBottom="2dip"
			android:layout_width="match_parent"
			android:text="@string/altitude"
			android:typeface="monospace" />
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/longitude"
			android:textSize="18sp" />
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/longitude"
			android:typeface="monospace" />
	</LinearLayout>
</LinearLayout>