<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	style="@style/FishnStore">
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical">
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/name"
			android:textSize="18sp" />
		<TextView
			android:id="@+id/view_location_fragment_textview_name"
			android:layout_height="wrap_content"
			android:layout_marginBottom="12dip"
			android:layout_width="match_parent"
			android:textIsSelectable="true" />
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/altitude"
			android:textSize="20sp" />
		<TextView
			android:id="@+id/view_location_fragment_textview_altitude"
			android:layout_height="wrap_content"
			android:layout_marginBottom="12dip"
			android:layout_width="match_parent"
			android:textIsSelectable="true"
			android:typeface="monospace" />
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/altitude"
			android:textSize="20sp" />
		<TextView
			android:id="@+id/view_location_fragment_textview_latitude"
			android:layout_height="wrap_content"
			android:layout_marginBottom="12dip"
			android:layout_width="match_parent"
			android:textIsSelectable="true"
			android:typeface="monospace" />
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/longitude"
			android:textSize="20sp" />
		<TextView
			android:id="@+id/view_location_fragment_textview_longitude"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dip"
			android:layout_width="match_parent"
			android:textIsSelectable="true"
			android:typeface="monospace" />
	</LinearLayout>
</ScrollView>